--- a/is-server/package.json
+++ b/is-server/package.json
@@ -20,10 +20,17 @@
   },
   "dependencies": {
     "@prisma/client": "^2.19.0",
+    "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "http-status": "^1.5.0",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   },
   "keywords": [],
@@ -31,6 +38,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/passport-jwt": "^3.0.5",
     "prisma": "^2.19.0"
   }
 }
