--- a/is-server/package.json
+++ b/is-server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "predev": "npm run generate:prisma",
     "dev": "cross-env NODE_ENV=development tsnd --no-notify --respawn ./src/index.ts",
+    "prebuild": "yarn run generate:prisma",
     "build": "tsc",
     "seed": "ts-node prisma/seed.ts",
     "clean": "rimraf dist",
