--- a/is-frontend/package.json
+++ b/is-frontend/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/styled-components": "^5.1.9",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -18,6 +20,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "styled": "^1.0.0",
+    "styled-components": "^5.2.1",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
