--- a/is-server/package.json
+++ b/is-server/package.json
@@ -44,6 +44,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/passport-jwt": "^3.0.5",
-    "prisma": "^2.19.0"
+    "prisma": "^2.19.0",
+    "prisma-docs-generator": "^0.3.0"
   }
 }
