--- a/is-frontend/package.json
+++ b/is-frontend/package.json
@@ -15,6 +15,8 @@
     "@types/styled-components": "^5.1.9",
     "antd": "^4.14.0",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
